# kobold

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
ci/: miri.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/kobold/: Cargo.toml
crates/kobold/js/: util.js
crates/kobold/src/: attribute.rs  branch.rs  branching.rs  callback.rs  diff.rs  dom.rs  event.rs  internal.rs  internals.rs  keywords.rs  lib.rs  link.rs  list.rs  maybe.rs  mini.rs  ptr.rs  render_fn.rs  state.rs  stateful.rs  stateful_new.rs  text.rs  traits.rs  util.rs  value.rs
crates/kobold/src/diff/: vstring.rs
crates/kobold/src/list/: bounded.rs  keyed.rs  linked_list.rs  linked_list_book.rs  linked_list_dyn.rs  linked_list_meta.rs  linked_list_opt.rs  linked_list_page.rs  log.rs  page_list.rs  pagelist.rs  tracking.rs  unbounded.rs
crates/kobold/src/stateful/: cell.rs  ctx.rs  hook.rs  into_state.rs  link.rs  owned_hook.rs  product.rs  should_render.rs  weak.rs
crates/kobold/src/stateful_new/: hook.rs
crates/kobold_experiment/: Cargo.toml
crates/kobold_experiment/js/: util.js
crates/kobold_experiment/src/: gats.rs  lib.rs  list.rs  render_fn.rs  stateful.rs  util.rs  value.rs
crates/kobold_experiment/src/stateful/: link.rs
crates/kobold_macros/: Cargo.toml
crates/kobold_macros/src/: branching.rs  class.rs  component.rs  dom.rs  dom2.rs  fn_component.rs  gen.rs  gen2.rs  itertools.rs  lib.rs  parse.rs  parser.rs  syntax.rs  token_ext.rs  tokenize.rs
crates/kobold_macros/src/branching/: ast.rs  parse.rs  tokenize.rs
crates/kobold_macros/src/dom/: els.rs  expression.rs  shallow.rs
crates/kobold_macros/src/dom2/: expression.rs  shallow.rs
crates/kobold_macros/src/fn_component/: generic_finder.rs
crates/kobold_macros/src/gen2/: component.rs  element.rs  fragment.rs  token_stream.rs  transient.rs
crates/kobold_new/: Cargo.toml
crates/kobold_new/src/: internals.rs  lib.rs  ptr.rs  traits.rs  value.rs
crates/kobold_opt/: Cargo.toml
crates/kobold_opt/src/: main.rs
crates/kobold_qr/: Cargo.toml
crates/kobold_qr/src/: lib.rs
crates/kobold_router/: Cargo.toml
crates/kobold_router/js/: util.js
crates/kobold_router/src/: internal.rs  lib.rs
examples/clicker/: Cargo.toml
examples/clicker/src/: main.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/csv_editor/: Cargo.toml  Trunk.toml  index.html
examples/csv_editor/src/: csv.rs  main.rs  state.rs
examples/default_params/: Cargo.toml  index.html
examples/default_params/src/: main.rs
examples/defaults/: Cargo.toml  index.html
examples/defaults/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs  state.rs
examples/interval/: Cargo.toml  Trunk.toml  index.html
examples/interval/src/: main.rs
examples/invoice/: Cargo.toml  README.md  Trunk.toml  __kobold_click_element.js  details.csv  index.html  index.js  invoice.csv  koboldInputEmptyValue.js  koboldRemoveRow.js  koboldSaveFile.js  styles.css
examples/invoice/data/: details.csv  main.csv
examples/invoice/src/: csv.rs  main.rs  state.rs  tests.rs
examples/invoice/src/components/: ButtonAddRow.rs  ButtonDestroyRow.rs  Cell.rs  CellDetails.rs  Editor.rs  Head.rs  HeadDetails.rs  Logo.rs  QRForTask.rs  mod.rs
examples/invoice/src/components/util/: sword.rs
examples/invoice/src/helpers/: csv_helpers.rs  logo_helpers.rs  mod.rs
examples/invoice/src/js/: browser_js.rs  mod.rs
examples/invoice/src/js/interfaces/: browser_js_spec_alert.rs  browser_js_spec_macros.rs  mod.rs  non_browser_js_spec_class_example.rs  non_browser_js_spec_click_element.rs  non_browser_js_spec_input_empty_value.rs  non_browser_js_spec_remove_row.rs  non_browser_js_spec_save_file.rs
examples/list/: Cargo.toml  Trunk.toml  index.html
examples/list/src/: main.rs
examples/npm_lib/: .gitignore  Cargo.toml  README.md  Trunk.toml  esbuild.js  index.html  koboldNpmLib.js  package.json
examples/npm_lib/src/: main.rs
examples/npm_lib/src/js/: browser_js.rs
examples/npm_lib/src/js/interfaces/: browser_js_spec_macros.rs  browser_js_spec_npm_lib.rs  mod.rs
examples/npm_lib/tests/: wasm.rs
examples/optional_params/: Cargo.toml  index.html
examples/optional_params/src/: main.rs
examples/qrcode/: Cargo.toml  Trunk.toml  bundle.sh  index.html
examples/qrcode/src/: main.rs
examples/router/: Cargo.toml  index.html
examples/router/src/: main.rs
examples/self_borrow/: Cargo.toml
examples/self_borrow/src/: main.rs
examples/stateful/: Cargo.toml  index.html
examples/stateful/src/: main.rs
examples/todomvc/: Cargo.toml  Trunk.toml  bundle.sh  index.html  package.json
examples/todomvc/src/: filter.rs  main.rs  state.rs
kobold/: Cargo.toml
kobold/js/: util.js
kobold/src/: attribute.rs  callback.rs  context.rs  internals.rs  lib.rs  link.rs  list.rs  scope.rs  text.rs  traits.rs  util.rs  value.rs
kobold_macros/: Cargo.toml
kobold_macros/src/: dom.rs  gen.rs  lib.rs  parser.rs
sketch/: Cargo.toml
sketch/js/: util.js
sketch/src/: attribute.rs  internals.rs  lib.rs  list.rs  main.rs  text.rs  traits.rs  util.rs  value.rs
sketch_macro/: Cargo.toml
sketch_macro/src/: dom.rs  gen.rs  lib.rs  parser.rs
sketch_macro/src/dom/: parser.rs
system/: Cargo.toml  classes.md
system/src/: main.rs
system_macro/: Cargo.toml
system_macro/src/: dom.rs  gen.rs  lib.rs
system_macro/src/dom/: parser.rs
tests/: Cargo.toml  index.html
tests/src/: main.rs
