[workspace]
members = [
    "crates/kobold",
    "crates/kobold_macros",
    "examples/counter",
    "examples/hello_world",
    "examples/list",
    "examples/stateful",
    "examples/todomvc",
]

[patch.crates-io]
kobold_macros = { path = "crates/kobold_macros" }

[profile.release]
lto = "fat"
codegen-units = 1

[profile.bench]
lto = "fat"
codegen-units = 1
