[workspace]
members = [
    "crates/kobold",
    "crates/kobold_macros",
    "crates/kobold_qr",
    "examples/counter",
    "examples/hello_world",
    "examples/list",
    "examples/stateful",
    "examples/interval",
    "examples/qrcode",
    "examples/todomvc",
]

[patch.crates-io]
kobold = { path = "crates/kobold" }
kobold_macros = { path = "crates/kobold_macros" }
kobold_qr = { path = "crates/kobold_qr" }

[profile.release]
lto = "fat"
codegen-units = 1

[profile.bench]
lto = "fat"
codegen-units = 1
