[package]
name = "kobold"
version = "0.0.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2018"
license = "GPL-3.0"
readme = "../README.md"
description = "WIP frontend framework"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beef = "0.5.1"
kobold_macros = { path = "../kobold_macros" }
wasm-bindgen = "0.2.74"
itoa = "0.4.7"
dtoa = "0.4.8"

[dependencies.web-sys]
version = "0.3"
features = [
  # "AbortController",
  # "AbortSignal",
  # "AnimationEvent",
  # "BinaryType",
  # "Blob",
  # "BlobPropertyBag",
  # "console",
  # "DedicatedWorkerGlobalScope",
  "Document",
  # "DomTokenList",
  # "DragEvent",
  "Element",
  # "ErrorEvent",
  # "Event",
  # "EventTarget",
  # "File",
  # "FileList",
  # "FileReader",
  # "FocusEvent",
  # "Headers",
  "HtmlElement",
  # "HtmlButtonElement",
  # "HtmlInputElement",
  # "HtmlSelectElement",
  # "HtmlTextAreaElement",
  # "InputEvent",
  # "KeyboardEvent",
  # "Location",
  # "MessageEvent",
  # "MouseEvent",
  "Node",
  # "ObserverCallback",
  # "PointerEvent",
  # "ProgressEvent",
  # "ReferrerPolicy",
  # "Request",
  # "RequestCache",
  # "RequestCredentials",
  # "RequestInit",
  # "RequestMode",
  # "RequestRedirect",
  # "Response",
  # "Storage",
  "Text",
  # "TouchEvent",
  # "TransitionEvent",
  # "UiEvent",
  # "Url",
  # "WebSocket",
  # "WheelEvent",
  "Window",
  # "Worker",
  # "WorkerGlobalScope",
  # "WorkerOptions",
]

[profile.release]
lto = true
