[package]
name = "kobold_macros"
version = "0.0.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2018"
license = "GPL-3.0"
readme = "../README.md"
description = "Macros for the kobold framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beef = "0.5.1"
arrayvec = "0.7.1"
fnv = "1.0.7"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
