[package]
name = "sketch"
version = "0.1.0"
authors = ["Maciej Hirsz <maciej.hirsz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.5"
stdweb = "0.4"
lazy_static = "1.4.0"
sketch_macro = { path = "../sketch_macro" }

[profile.release]
lto = true
