[package]
name = "sketch"
version = "0.1.0"
authors = ["Maciej Hirsz <maciej.hirsz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beef = "0.5.1"
# wee_alloc = "0.4.5"
# stdweb = "0.4"
# lazy_static = "1.4.0"
sketch_macro = { path = "../sketch_macro" }
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3"
features = [
  # "AbortController",
  # "AbortSignal",
  # "AnimationEvent",
  # "BinaryType",
  # "Blob",
  # "BlobPropertyBag",
  # "console",
  # "DedicatedWorkerGlobalScope",
  "Document",
  # "DomTokenList",
  # "DragEvent",
  "Element",
  # "ErrorEvent",
  # "Event",
  # "EventTarget",
  # "File",
  # "FileList",
  # "FileReader",
  # "FocusEvent",
  # "Headers",
  "HtmlElement",
  # "HtmlButtonElement",
  # "HtmlInputElement",
  # "HtmlSelectElement",
  # "HtmlTextAreaElement",
  # "InputEvent",
  # "KeyboardEvent",
  # "Location",
  # "MessageEvent",
  # "MouseEvent",
  "Node",
  # "ObserverCallback",
  # "PointerEvent",
  # "ProgressEvent",
  # "ReferrerPolicy",
  # "Request",
  # "RequestCache",
  # "RequestCredentials",
  # "RequestInit",
  # "RequestMode",
  # "RequestRedirect",
  # "Response",
  # "Storage",
  "Text",
  # "TouchEvent",
  # "TransitionEvent",
  # "UiEvent",
  # "Url",
  # "WebSocket",
  # "WheelEvent",
  "Window",
  # "Worker",
  # "WorkerGlobalScope",
  # "WorkerOptions",
]

[profile.release]
lto = true
