[package]
name = "sketch_macro"
version = "0.1.0"
authors = ["Maciej Hirsz <maciej.hirsz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
