[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kobold = { path = "../kobold" }
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
lto = true
