[package]
name = "kobold"
version = "0.2.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2021"
license = "LGPL-3.0"
readme = "../../README.md"
description = "WIP frontend framework"
repository = "https://github.com/maciejhirsz/kobold"
documentation = "https://docs.rs/kobold"

[dependencies]
wasm-bindgen = "0.2.74"
itoa = "1.0.1"
ryu = "1.0.10"
kobold_macros = "0.2"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Event",
  "HtmlElement",
  "Node",
  "Text",
  "Window",
]
