[package]
name = "kobold"
version = "0.4.1"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2021"
license = "LGPL-3.0"
readme = "../../README.md"
keywords = ["web", "wasm", "javascript"]
categories = ["wasm", "web-programming"]
description = "Easy declarative web interfaces"
repository = "https://github.com/maciejhirsz/kobold"
documentation = "https://docs.rs/kobold"

[dependencies]
wasm-bindgen = "0.2.81"
itoa = "1.0.1"
ryu = "1.0.10"
kobold_macros = "0.4.1"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Event",
  "MouseEvent",
  "KeyboardEvent",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlOptionElement",
  "HtmlSelectElement",
  "HtmlLinkElement",
  "HtmlTextAreaElement",
  "Node",
  "Text",
  "Window",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
