[package]
name = "kobold"
version = "0.9.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2021"
license = "MPL-2.0"
readme = "../../README.md"
keywords = ["web", "wasm", "javascript"]
categories = ["wasm", "web-programming"]
description = "Easy declarative web interfaces"
repository = "https://github.com/maciejhirsz/kobold"
documentation = "https://docs.rs/kobold"

[features]
default = ["stateful"]
stateful = []

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
itoa = "1.0.6"
kobold_macros = { version = "0.9.0", path = "../kobold_macros" }
console_error_panic_hook = "0.1.7"
rlsf = { version = "0.2.1", optional = true }
serde = { version = "1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Event",
  "MouseEvent",
  "KeyboardEvent",
  "HtmlElement",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "HtmlOptionElement",
  "HtmlSelectElement",
  "HtmlLinkElement",
  "HtmlTextAreaElement",
  "Node",
  "Text",
  "Window",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
