[package]
name = "kobold_macros"
version = "0.2.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2021"
license = "LGPL-3.0"
readme = "../../README.md"
description = "Macros for the kobold framework"
repository = "https://github.com/maciejhirsz/kobold"
documentation = "https://docs.rs/kobold"

[dependencies]
beef = "0.5.2"
arrayvec = "0.7.2"
fnv = "1.0.7"
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
