[package]
name = "kobold_macros"
version = "0.10.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2021"
license = "MPL-2.0"
readme = "../../README.md"
keywords = ["web", "wasm", "javascript"]
categories = ["wasm", "web-programming"]
description = "Macros for Kobold"
repository = "https://github.com/maciejhirsz/kobold"
documentation = "https://docs.rs/kobold"

[dependencies]
arrayvec = "0.7.2"
beef = "0.5.2"
fnv = "1.0.7"
once_cell = "1.17.1"

[dev-dependencies]
proc-macro2 = "1.0.51"

[lib]
proc-macro = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
