[package]
name = "kobold_new"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nougat = "0.1.0"
wasm-bindgen = "0.2.74"
itoa = "0.4.7"
dtoa = "0.4.8"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Event",
  "HtmlElement",
  "Node",
  "Text",
  "Window",
]
