[package]
name = "kobold_qr"
version = "0.5.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2021"
license = "LGPL-3.0"
readme = "../../README.md"
keywords = ["web", "wasm", "javascript", "qr"]
description = "QR code component for Kobold"

[dependencies]
fast_qr = "0.8.4"
kobold = { path = "../kobold", version = "0.5.0" }
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
]
