[package]
name = "kobold_qr"
version = "0.7.1"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2021"
license = "MPL-2.0"
readme = "../../README.md"
keywords = ["web", "wasm", "javascript", "qr"]
description = "QR code component for Kobold"

[dependencies]
fast_qr = "0.8.5"
kobold = { version = "0.7.1", path = "../kobold" }
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
]
